--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "canvas": "^1.3.15",
-    "restify": "^4.0.4"
+    "restify": "^4.0.4",
+    "images": "3.0.0",
+    "walk": "2.3.9"
   }
 }
