change pos shot code

--- a/modules/tileconfig.json
+++ b/modules/tileconfig.json
@@ -4,7 +4,7 @@
         "OutPath" : "/FY4A/TMP/",
         "FY4A_AGRI_PRJ_500M_0064":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/PRJ/",
-            "Res":"500",
+            "Res":"500M",
             "Desc":"可见光云图(500m)",
             "Key":"PRJ1",
             "TopLeftLat":"60",
@@ -16,7 +16,7 @@
         },
         "FY4A_AGRI_NOM":{
             "BasePath" : "/home/lihy/workstation/test/",
-            "Res":"2000",
+            "Res":"2000M",
             "Desc":"可见光云图(2000m)",
             "Key":"NOM",
             "TopLeftLat":"80",
@@ -28,7 +28,7 @@
         },
         "FY4A_AGRI_EVI":{
             "BasePath" : "/FY4COMM/FY4A/L3/AGRIX/EVI/",
-            "Res":"1000",
+            "Res":"1000M",
             "Desc":"增强型植被指数",
             "Key":"EVI",
             "TopLeftLat":"60",
@@ -40,7 +40,7 @@
         },
         "FY4A_AGRI_NVI":{
             "BasePath" : "/FY4COMM/FY4A/L3/AGRIX/NVI/",
-            "Res":"1000",
+            "Res":"1000M",
             "Desc":"归一化植被指数",
             "Key":"NVI",
             "TopLeftLat":"60",
@@ -52,7 +52,7 @@
         },
         "FY4A_AGRI_PRJ_1000M_0086":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/PRJ/",
-            "Res":"1000",
+            "Res":"1000M",
             "Desc":"水汽云图(1000m)",
             "Key":"PRJ2",
             "TopLeftLat":"60",
@@ -64,7 +64,7 @@
         },
         "FY4A_AGRI_PRJ_2000M_1120":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/PRJ/",
-            "Res":"2000",
+            "Res":"2000M",
             "Desc":"红外云图(1000m)",
             "Key":"PRJ3",
             "TopLeftLat":"60",
@@ -76,7 +76,7 @@
         },
         "FY4A_AGRI_VWI":{
             "BasePath" : "/FY4COMM/FY4A/L3/AGRIX/VWI/",
-            "Res":"1000",
+            "Res":"1000M",
             "Desc":"植被供水指数",
             "Key":"VWI",
             "TopLeftLat":"60",
@@ -88,7 +88,7 @@
         },
         "FY4A_AGRI_ACI":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/ACI/",
-            "Res":"1000",
+            "Res":"1000M",
             "Desc":"真彩色云图(1000m)",
             "Key":"ACI",
             "TopLeftLat":"60",
@@ -100,7 +100,7 @@
         },
         "FY4A_AGRI_CLM":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CLM/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"云检测",
             "Key":"CLM",
             "TopLeftLat":"60",
@@ -112,7 +112,7 @@
         },
         "FY4A_AGRI_ConvectiveInitiation":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CIX/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"对流初生(强度)",
             "Key":"CIX",
             "TopLeftLat":"60",
@@ -124,7 +124,7 @@
         },
         "FY4A_AGRI_CLP":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CLP/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"云相态",
             "Key":"CLP",
             "TopLeftLat":"60",
@@ -136,7 +136,7 @@
         },
         "FY4A_AGRI_CLT":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CLT/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"云类型",
             "Key":"CLT",
             "TopLeftLat":"60",
@@ -148,7 +148,7 @@
         },
         "FY4A_AGRI_CTH":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CTH/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"云顶高度",
             "Key":"CTH",
             "TopLeftLat":"60",
@@ -160,7 +160,7 @@
         },
         "FY4A_AGRI_CTP":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CTP/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"云顶气压",
             "Key":"CTP",
             "TopLeftLat":"60",
@@ -172,7 +172,7 @@
         },
         "FY4A_AGRI_CTT":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CTT/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"云顶温度",
             "Key":"CTT",
             "TopLeftLat":"60",
@@ -184,7 +184,7 @@
         },
         "FY4A_AGRI_CPD_COT":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CPD/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"白天云微物理-云光学厚度",
             "Key":"COT",
             "TopLeftLat":"60",
@@ -196,7 +196,7 @@
         },
         "FY4A_AGRI_CPD_CER":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CPD/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"白天云微物理-云有效粒子半径",
             "Key":"CER",
             "TopLeftLat":"60",
@@ -208,7 +208,7 @@
         },
         "FY4A_AGRI_CPD_LWP":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CPD/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"白天云微物理-云液体",
             "Key":"LWP",
             "TopLeftLat":"60",
@@ -220,7 +220,7 @@
         },
         "FY4A_AGRI_CPD_IWP":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/CPD/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"白天云微物理-冰水",
             "Key":"IWP",
             "TopLeftLat":"60",
@@ -232,7 +232,7 @@
         },
         "FY4A_AGRI_FOG":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/FOG/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"雾检测",
             "Key":"FOG",
             "TopLeftLat":"60",
@@ -244,7 +244,7 @@
         },
         "FY4A_AGRI_OCA_ADO0":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/OCA/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"海洋气溶胶(0.47um)",
             "Key":"AOD_0",
             "TopLeftLat":"60",
@@ -256,7 +256,7 @@
         },
         "FY4A_AGRI_LDA_ADO1":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/LDA/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"陆地气溶胶(0.55um)",
             "Key":"AOD_1",
             "TopLeftLat":"60",
@@ -268,7 +268,7 @@
         },
         "FY4A_AGRI_DSD":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/DSD/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"沙尘检测",
             "Key":"DSD",
             "TopLeftLat":"60",
@@ -281,7 +281,7 @@
         "FY4A_AGRI_QPE":{
             "BasePath1" : "/FY4COMM/FY4A/L2/AGRIX/QPE/",
             "BasePath" : "/home/lihy/workstation/test/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"降水检测",
             "Key":"QPE",
             "TopLeftLat":"60",
@@ -293,7 +293,7 @@
         },
         "FY4A_AGRI_LST":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/LST/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"地表温度",
             "Key":"LST",
             "TopLeftLat":"60",
@@ -305,7 +305,7 @@
         },
         "FY4A_AGRI_SST":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/SST/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"海表温度",
             "Key":"SST",
             "TopLeftLat":"60",
@@ -317,7 +317,7 @@
         },
         "FY4A_AGRI_OCA_ADO1":{
             "BasePath" : "/FY4COMM/FY4A/L2/AGRIX/OCA/",
-            "Res":"4000",
+            "Res":"4000M",
             "Desc":"海洋气溶胶(0.65um)",
             "Key":"AOD_1",
             "TopLeftLat":"60",
@@ -328,6 +328,24 @@
             "Height":"1501"
         }
     },
+    "fy3c": {
+        "SatType" : "POS",
+        "OutPath": "/FY3C/TMP/",
+        "FY3C_VIRR_121": {
+          "BasePath": "/",
+          "Res": "250M",
+          "Desc": "大气校正图(真彩色121)",
+          "Width":"4000",
+          "Height":"4000"
+        },
+        "FY3C_VIRR_191": {
+          "BasePath": "/",
+          "Res": "250M",
+          "Desc": "大气校正图(真彩色191)",
+          "Width":"4000",
+          "Height":"4000"
+        }
+    },
     "noaa18": {
         "SatType" : "POS",
         "OutPath": "/NOAA18/TMP/",
@@ -335,7 +353,7 @@
           "BasePath": "/",
           "Res": "",
           "Desc": "大气校正图(真彩色)",
-         "Key": ""
+          "Key": ""
         }
     },
     "noaa19": {
